--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    
+    <ul>
+        <li><a href="recipes/honey-glazed-chicken.html">Honey-Glazed-Chicken</a></li>
+        <li></li>
+        <li></li>
+    </ul>
 </body>
 </html>
