--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>Odin Recipes</h1>
     <ul>
         <li><a href="recipes/honey-glazed-chicken.html">Honey-Glazed-Chicken</a></li>
-        <li></li>
+        <li><a href="recipes/chicken-soup.html">Creamy-Chicken-Vegetable-Soup</a></li>
         <li></li>
     </ul>
 </body>
